Bug and style fixes, Added "About" section

--- a/src/app/dijit/templates/Movie.html
+++ b/src/app/dijit/templates/Movie.html
@@ -1,6 +1,6 @@
 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center movie-node">
     <a id="movie-${movieID}" class="movie-option" data-dojo-attach-point="movieLink">
-        <h5 style="min-height: 35px;height:35px;" >${title}</h5>
+        <h5>${title}</h5>
         <img src=${imageURL} alt="${title}">
     </a>
 </div>
