--- a/src/app/dijit/templates/Result.html
+++ b/src/app/dijit/templates/Result.html
@@ -5,11 +5,11 @@
         </h1>
 
         <h3 data-dojo-attach-point="correctTitleLabel">
-            The correct answer was ${correctTitle}
+            The correct movie was "${correctTitle}"
         </h3>
 
-        <button class="btn-default" data-dojo-attach-point="nextRoundBtn">
+        <a class="btn btn-success" data-dojo-attach-point="nextRoundBtn">
             Next Round >>
-        </button>
+        </a>
     </div>
 </div>
