--- a/src/app/dijit/templates/Main.html
+++ b/src/app/dijit/templates/Main.html
@@ -2,31 +2,11 @@
     <div class="navbar navbar-default navbar-fixed-top">
         <a class="navbar-brand">Movie Matcher</a>
         <ul class="nav navbar-nav navbar-right" style="margin-right: 20px;">
-            <li role="presentation"><a href="#">Play</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a data-dojo-attach-point="navPlayBtn">Play</a></li>
+            <li role="presentation"><a data-dojo-attach-point="navAboutBtn">About</a></li>
         </ul>
     </div>
 
-    <div id="movieLoading" data-dojo-attach-point="movieLoading">
-        <h2>Loading Movies...</h2>
-    </div>
-
-    <div id="movieDetails" data-dojo-attach-point="movieDetails" class="row hidden">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-            <h4 data-dojo-attach-point="taglineLabel"></h4>
-            <span>
-                <span data-dojo-attach-point="genreLabel"></span>
-                released in <span data-dojo-attach-point="yearLabel"></span>.
-                Directed by <span data-dojo-attach-point="directorLabel"></span>,
-                grossing a total of <span data-dojo-attach-point="revenueLabel"></span>
-            </span>
-        </div>
-    </div>
-
-    <div id="movieList" data-dojo-attach-point="movieList" class="row"></div>
-
-    <footer class="footer">
-        <p></p>
-    </footer>
-
+    <div id="aboutContainer" data-dojo-attach-point="aboutContainer" data-dojo-type="app/dijit/About"></div>
+    <div id="playContainer" data-dojo-attach-point="playContainer" data-dojo-type="app/dijit/Play" class="hidden"></div>
 </div>
