--- a/src/app/resources/app.css
+++ b/src/app/resources/app.css
@@ -3,6 +3,7 @@
 @import '../../dgrid/css/dgrid.css';
 @import 'bootstrap.min.css';
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+
 html,body {
     height: 100%;
     margin: 0;
@@ -22,24 +23,17 @@ html,body {
     background-color: #222;
 }
 
-.guess-result-container div {
-    background-color: rgba(236,236,236, 0.95);
-    border: solid 1px #000;
-    text-align:center;
-    width:100%;
-    padding: 0 10px 20px 10px;
+.movie-option {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-.guess-result-container > div > h3 {
-    color: #333;
-}
-
-.guess-incorrect-label {
-    color: #ff0000;
-}
-
-.guess-correct-label {
-    color: #00cf00;
+.movie-option h5 {
+    min-height: 35px;
+    height:35px;
 }
 
 #movieLoading {
@@ -61,4 +55,26 @@ html,body {
     margin-top:0;
     min-height: 260px;
     height:260px;
+}
+
+.guess-result-container div {
+    background-color: rgba(236,236,236, 0.95);
+    border: solid 1px #000;
+    border-radius: 8px;
+    text-align:center;
+    width:100%;
+    padding: 0 10px 20px 10px;
+}
+
+.guess-result-container > div > h3 {
+    color: #333;
+    padding-bottom: 5px;
+}
+
+.guess-incorrect-label {
+    color: #ff0000;
+}
+
+.guess-correct-label {
+    color: #00cf00;
 }
