Fixed build errors, added additional tests

--- a/src/app/dijit/templates/About.html
+++ b/src/app/dijit/templates/About.html
@@ -1,5 +1,16 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center" style="margin: 100px 10px 10px 10px;">
-    <h2>About</h2>
-    <p>Lorem ipsum...</p>
+    <h2>A Movie Guessing Game</h2>
+    <p>
+        This is a movie guessing game: You'll get the tagline to the movie and four options
+        to choose from. If you need a hint, you will get additional information such as year
+        released, director and top actors of the movie. All movie information is pulled dynamically
+        from Google Freebase.
+    </p>
+
+    <p>
+        This game is a sample to showcase the combination of the Dojo framework, Intern unit testing, and jsdoc
+        documentation generation.
+    </p>
+
     <a data-dojo-attach-point="playGameBtn" class="btn btn-success">Play!</a>
 </div>
