--- a/src/app/dijit/templates/Actor.html
+++ b/src/app/dijit/templates/Actor.html
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
+<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center actor-node">
     <h5>${name}</h5>
     <img src="${imageURL}" alt="${name}" class="img-circle">
 </div>
