--- a/src/app/resources/app.css
+++ b/src/app/resources/app.css
@@ -23,6 +23,11 @@ html,body {
     background-color: #222;
 }
 
+.actor-node h5 {
+    color: #999;
+    font-size: 0.9em;
+}
+
 .movie-option {
     display: inline-block;
     width: 100%;
