--- a/src/app/dijit/templates/About.html
+++ b/src/app/dijit/templates/About.html
@@ -1,16 +1,27 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center" style="margin: 100px 10px 10px 10px;">
     <h2>A Movie Guessing Game</h2>
+
     <p>
         This is a movie guessing game: You'll get the tagline to the movie and four options
         to choose from. If you need a hint, you will get additional information such as year
-        released, director and top actors of the movie. All movie information is pulled dynamically
-        from Google Freebase.
+        released, director and top actors of the movie.
     </p>
 
-    <p>
-        This game is a sample to showcase the combination of the Dojo framework, Intern unit testing, and jsdoc
-        documentation generation.
-    </p>
+    <h4 class="text-left">Built with:</h4>
+    <ul class="text-left">
+        <li>
+            <a href="">Google Freebase</a>
+        </li>
+        <li>
+            <a href="">Dojo</a> JavaScript framework
+        </li>
+        <li>
+            <a href="">The Intern</a> unit testing framework
+        </li>
+        <li>
+            <a href="">JSDoc</a> documentation generator
+        </li>
+    </ul>
 
     <a data-dojo-attach-point="playGameBtn" class="btn btn-success">Play!</a>
 </div>
