Added links to about section

--- a/src/app/dijit/templates/About.html
+++ b/src/app/dijit/templates/About.html
@@ -10,16 +10,16 @@
     <h4 class="text-left">Built with:</h4>
     <ul class="text-left">
         <li>
-            <a href="">Google Freebase</a>
+            <a href="http://freebase.com/">Google Freebase</a>
         </li>
         <li>
-            <a href="">Dojo</a> JavaScript framework
+            <a href="http://dojotoolkit.org/">Dojo</a> JavaScript framework
         </li>
         <li>
-            <a href="">The Intern</a> unit testing framework
+            <a href="http://theintern.io/">Intern</a> unit testing framework
         </li>
         <li>
-            <a href="">JSDoc</a> documentation generator
+            <a href="http://usejsdoc.org/">JSDoc</a> documentation generator
         </li>
     </ul>
 
